# LightCraft

./: README.md  pyproject.toml  sdd.md
docs/: manual.md
src/lightcraft/: __init__.py  adjustments.py  analysis_service.py  app_window.py  canvas_view.py  compare_view.py  crop_rotate.py  document.py  export_dialog.py  export_service.py  histogram.py  history.py  i18n.py  image_io.py  main.py  models.py  preset_panel.py  presets.py  render_engine.py  settings.py  settings_dialog.py  theme.py
