[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "lightcraft"
version = "0.1.0"
description = "Phase 1 of a workflow-based desktop photo editor for beginner photographers."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "OpenAI" }
]
dependencies = [
  "PySide6>=6.8.0.1",
  "numpy>=2.2.0",
  "opencv-python>=4.10.0",
]

[project.scripts]
lightcraft = "lightcraft.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/lightcraft"]
